Integrate some of the design patterns in the UDP version into the TCP version.