@@ -21,13 +21,15 @@ import java.util.function.Predicate;
 
 import javax.swing.JOptionPane;
 
+import org.eclipse.jface.dialogs.MessageDialog;
+
 /**
- * Provide some method of showing input dialogs.
+ * Provides some method of showing input dialogs.
  * 
  * @author Andy Cheung
  */
 public final class CommonDialogs {
-    
+
     /**
      * Show input dialog.
      * @param askMessage The message of the dialog.
@@ -38,7 +40,7 @@ public final class CommonDialogs {
     public static String inputDialog(String askMessage, String errorMessage) {
         return inputDialog(null, askMessage, errorMessage);
     }
-    
+
     /**
      * Show input dialog.
      * @param defaultString The default value of the dialog text area.
@@ -50,7 +52,7 @@ public final class CommonDialogs {
     public static String inputDialog(String defaultString, String askMessage, String errorMessage) {
         return inputDialog(defaultString, askMessage, errorMessage, (a) -> true);
     }
-    
+
     /**
      * Show input dialog.
      * @param defaultString The default value of the dialog text area.
@@ -60,29 +62,40 @@ public final class CommonDialogs {
      * @return The user input.
      * @implNote The message dialog is produced by JOptionPane.
      */
-    public static String inputDialog(String defaultString, String askMessage, String errorMessage, Predicate<String> filter) {
+    public static String inputDialog(String defaultString, String askMessage, String errorMessage,
+            Predicate<String> filter) {
         String response;
         int counter = 0;
-        
+
         do {
-            response = (String) JOptionPane.showInputDialog(null, askMessage, "Input", JOptionPane.QUESTION_MESSAGE, null, null, defaultString);
+            response = (String) JOptionPane.showInputDialog(null, askMessage, "Input", JOptionPane.QUESTION_MESSAGE,
+                    null, null, defaultString);
             counter++;
-        } while ((response == null || response.isBlank() || !filter.test(response)) && counter <= 5);
-        
+        } while ((response == null || response.trim().isEmpty() || !filter.test(response)) && counter <= 5);
+
         if (counter > 5) {
-            errorDialog(errorMessage);
+            swingErrorDialog(errorMessage);
             System.exit(-1);
         }
-        
+
         return response;
+    }
+
+    /**
+     * Show error dialog.
+     * @param message The message to display.
+     * @implNote The message dialog is produced by JFace.
+     */
+    public static void errorDialog(String message) {
+        MessageDialog.openError(null, "错误", message);
     }
     
     /**
      * Show error dialog.
      * @param message The message to display.
-     * @implNote The message dialog is produced by JOptionPane.
+     * @implNote The message dialog is produced by Swing.
      */
-    public static void errorDialog(String message) {
+    private static void swingErrorDialog(String message) {
         JOptionPane.showMessageDialog(null, message, "ERROR", JOptionPane.ERROR_MESSAGE);
     }
 }
